--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -6,5 +6,14 @@
         "runtime": "python3.8",
         "s3_bucket": "atapibucket",
         "aws_region": "ap-south-1" 
+    },
+
+    "production": {
+        "app_function": "app.app",
+        "profile_name": "root",
+        "project_name": "pdf-to-text",
+        "runtime": "python3.8",
+        "s3_bucket": "atapibucket",
+        "aws_region": "ap-south-1" 
     }
 }
